# tycho_cfd

./: README  README.md
tycho_release_v1.3.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  configure.scan
tycho_release_v1.3.0/autom4te.cache/: output.0  traces.0
tycho_release_v1.3.0/initial_conditions/fractal/: boundary_fractal.tyc
tycho_release_v1.3.0/initial_conditions/playtown/: play_town_domain_ic.tyc
tycho_release_v1.3.0/initial_conditions/scramjet/: scramjet_emitter.tyc
tycho_release_v1.3.0/initial_conditions/sound/: boundary.tyc  soundemitter.tyc
tycho_release_v1.3.0/parameterfile/: cooling.txt  cooling2.txt  fractal.txt  kelvin_helmholtz_start_file.txt  playtown_start_file.txt  scramjet.txt  soundexample.txt  tunnel_ventilation_start_file.txt  ventilator_start_file.txt  windchannel.txt
tycho_release_v1.3.0/sources/: Makefile.am  Makefile.in  TYCHO.c  advection.c  alpha_heat_transfer.c  array_mallocater_global.c  big_endian_converter.c  boundary_velo_corrector.c  copy_arrays_for_viscosity.c  data_explorer.c  diffusion.c  dt_calc.c  dt_calc_first.c  evolve.c  flatten.c  hydro_sweeps.c  init.c  initiate_grid.c  kinematic_dyanmic_viscosity.c  make_ic.c  noise_generator.c  para_coef.c  parabola.c  ppm_step.c  pre_old_copy.c  pressure_on_solid_reset.c  prototypes.h  read_ic.c  read_restart.c  remap.c  riemann.c  set_boundary.c  start_file_reader.c  states.c  sweep_x.c  sweep_y.c  sweep_z.c  variables_global.h  viscosity.c  volume.c  (+10 more)
tycho_release_v1.3.0/tools/: README  domain_composer.m  marker_composer.m
(+10 files in other folders)
