# Makefile.am for TYCHO

bin_PROGRAMS = TYCHO
TYCHO_SOURCES = advection.c alpha_heat_transfer.c array_mallocater_global.c big_endian_converter.c boundary_velo_corrector.c copy_arrays_for_viscosity.c data_explorer.c diffusion.c dt_calc.c dt_calc_first.c evolve.c flatten.c hydro_sweeps.c init.c initiate_grid.c kinematic_dyanmic_viscosity.c make_ic.c parabola.c para_coef.c ppm_step.c pressure_on_solid_reset.c read_ic.c read_restart.c remap.c riemann.c set_boundary.c start_file_reader.c states.c sweep_x.c sweep_y.c sweep_z.c TYCHO.c viscosity.c volume.c wind.c write_amira.c write_ic_amira.c write_ic_ifrit.c write_ic_tyc.c write_ic_vtk.c write_ifrit.c write_restart_tyc.c write_tyc.c write_vtk.c noise_generator.c pre_old_copy.c prototypes.h variables_global.h 

